--- a/src/app/(index)/_pageResources/sections/Introduction/IntroductionClient/IDE/Code/pojoaque.css
+++ b/src/app/(index)/_pageResources/sections/Introduction/IntroductionClient/IDE/Code/pojoaque.css
@@ -1,77 +1,115 @@
+code[class*="language-"],
+pre[class*="language-"] {
+	color: #657b83; /* base00 */
+	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+	font-size: 1em;
+	text-align: left;
+	white-space: pre;
+	word-spacing: normal;
+	word-break: normal;
+	word-wrap: normal;
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+	line-height: 1.5;
 
-.hljs {
-  color: #6C6783;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+
+	-webkit-hyphens: none;
+	-moz-hyphens: none;
+	-ms-hyphens: none;
+	hyphens: none;
 }
 
-.hljs-comment,
-.hljs-quote {
-  color: #586e75;
-  font-style: italic;
+pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
+code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
+	background: #073642; /* base02 */
 }
 
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-literal,
-.hljs-addition {
-  @apply text-mostard-200;
+pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
+code[class*="language-"]::selection, code[class*="language-"] ::selection {
+	background: #073642; /* base02 */
 }
 
-.hljs-number,
-.hljs-string,
-.hljs-doctag,
-.hljs-regexp {
-  @apply text-mostard-400;
+/* Code blocks */
+pre[class*="language-"] {
+	padding: 1em;
+	margin: .5em 0;
+	overflow: auto;
+	border-radius: 0.3em;
 }
 
-.hljs-title,
-.hljs-section,
-.hljs-built_in,
-.hljs-name {
-  @apply text-neutral-100;
+/* Inline code */
+:not(pre) > code[class*="language-"] {
+	padding: .1em;
+	border-radius: .3em;
 }
 
-.hljs-variable,
-.hljs-template-variable,
-.hljs-title.class_,
-.hljs-class .hljs-title,
-.hljs-type,
-.hljs-tag {
-  @apply text-mostard-200;
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+	color: #93a1a1; /* base1 */
 }
 
-.hljs-attribute {
-  color: #b89859;
+.token.punctuation {
+	color: #586e75; /* base01 */
 }
 
-.hljs-symbol,
-.hljs-bullet,
-.hljs-link,
-.hljs-subst,
-.hljs-meta {
-  color: #cb4b16;
+.token.namespace {
+	opacity: .7;
 }
 
-.hljs-deletion {
-  color: #dc322f;
+.token.property,
+.token.tag,
+.token.boolean,
+.token.number,
+.token.constant,
+.token.symbol,
+.token.deleted {
+	color: #268bd2; /* blue */
 }
 
-.hljs-selector-id,
-.hljs-selector-class {
-  color: #d3a60c;
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.url,
+.token.inserted {
+	color: #2aa198; /* cyan */
 }
 
-.hljs-formula {
-  background: #073642;
+.token.entity {
+	color: #657b83; /* base00 */
+	background: #eee8d5; /* base2 */
 }
 
-.hljs-emphasis {
-  font-style: italic;
+.token.atrule,
+.token.attr-value,
+.token.keyword {
+	color: #859900; /* green */
 }
 
-.hljs-strong {
-  font-weight: bold;
+.token.function,
+.token.class-name {
+	color: #b58900; /* yellow */
+}
+
+.token.regex,
+.token.important,
+.token.variable {
+	color: #cb4b16; /* orange */
+}
+
+.token.important,
+.token.bold {
+	font-weight: bold;
+}
+.token.italic {
+	font-style: italic;
+}
+
+.token.entity {
+	cursor: help;
 }
