:lipstick: End new sections update

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,16 @@ html,
 body {
   scroll-behavior: smooth;
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  @apply bg-neutral-900;
+}
+
+::-webkit-scrollbar-thumb {
+  @apply bg-neutral-700;
+}
